2003-02-01  Sebastien Pouliot  <spouliot@videotron.ca>

	* Modules.cs: Oups - not implemented. Added MonoTODO to most methods
	so it's real status get reflected correctly on the web site.

2003-01-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoMethod.cs: implemented GetBaseDefinition ().

2003-01-28  Patrik Torstensson
	* MonoMethod.cs: Added support for serialization for MonoMethod and MonoCMethod
	* ReflectionSerializationHolder.cs: Support class for serialization

2003-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* ParameterInfo.cs: modified constructor so it allows the 
	ParameterBuilder to be null and add a 'position' argument which will
	be used when pb is null.

2003-01-16  Lluis Sanchez Gual <lsg@ctv.es>

	* Assembly.cs: added serialization support.

Sat Jan 4 18:26:41 CET 2003 Paolo Molaro <lupus@ximian.com>

	* MonoMethod.cs: propagate exceptions from the internal invoke
	code that need to be propagated.

Sat Jan 4 18:04:07 CET 2003 Paolo Molaro <lupus@ximian.com>

	* Binder.cs: throw an exception if the number of arguments 
	when invoking a method is incorrect.

Thu Jan 2 19:04:58 CET 2003 Paolo Molaro <lupus@ximian.com>

	* Binder.cs: In SelectMethod() look for an exact match first.

2003-01-01  Rachel Hestilow <hestilow@ximian.com>

	* MonoField.cs (SetValue): Fix logic typo. Check that obj is
	non-null only for the non-static case.

2002-12-30  Sebastien Pouliot <spouliot@videotron.ca>

	* AssemblyName.cs: Fixed null cultureinfo in FullName (as reported by 
	Zoltan).

2002-12-23  Sebastien Pouliot <spouliot@videotron.ca>

	* AssemblyName.cs: GetPublicKey now return an empty array (not null)
	when an assembly isn't signed with a StrongName (to match MS 
	implementation) and null when no assembly is referenced. Also removed 
	commented code (no bug reported so it was probably not used).

Thu Dec 19 16:43:19 CET 2002 Paolo Molaro <lupus@ximian.com>

	* MonoMethod.cs, ParameterInfo.cs: return a custom attribute